# cloud-native-ninja

./: .gitignore  README.md  docker-compose-dockerhub.yml  docker-compose-dotnet-acr-include.yml  docker-compose-dotnet-acr.yml  docker-compose-dotnet-consumer-acr.yml  docker-compose-go-acr-ci.yml  docker-compose-go-acr.yml  docker-compose-go-dockerhub.yml  docker-compose-java-acr.yml  docker-compose-java-dockerhub.yml  docker-compose.yml  techtalks-producer.http  warp-redaction.md
.azuredevops/: dependabot.yml
.github/: dependabot.yml
Components/: pubsub.yaml
Powershell/: deploy-dapr.ps1  deploy-nginx.ps1  deploy-techtalks-ingress.ps1  deployAll.ps1  deployAllLocal.ps1  deployAutoScaler.ps1  deployDaprComponents.ps1  deployKEDA.ps1  deployTechTalks-AKS.ps1  initializeAKS.ps1  install-dapr-extension.ps1  install-k8sgpt.ps1  teardownAutoScaler.ps1  teardownTechTalks-AKS.ps1  var.ps1
dapr-components/: rabbitmq-pubsub.yaml
docs/: 01-getting-started-with-containers  01-getting-started-with-containers.md  02-containerize-dot-net-app.md  03-docker-commands.md  04-docker-compose-commands.md  04-java-docker.md  05-dockerhub.md  05-java-docker.md  06-java-docker.md  07-go-docker.md  08-react.md  10-kubernetes-deployments.md  11-kubernetes-service.md  12-kubernetes-ingress.md  13-kubernetes-namespace.md  14-helm.md  aks-akv-integration.md  dapr-setup-youtube-video.md  docker-compose-include.md  go-dapr.md  (+2 more)
src/rust/pubsub/subscriber/: .dockerignore  Cargo.toml  Dockerfile
src/rust/pubsub/subscriber/k8s/: deployment.yaml
src/rust/pubsub/subscriber/src/: main.rs
(+121 files in other folders)
