[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dapr = "0.11.0"
prost = "0.11.9"
rand = "0.8.5"
serde =  { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio =  { version = "1.28.1", features = ["full"] }
tonic = "0.8"
actix-web = "4"
env_logger = "0.10.0"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
